# bff-coingecko-dad

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  wokflow.sh
.github/workflows/: ci.yml
postman/: collection.json
requisitos/: requisitos.md
src/: main.py
src/DTOs/: __init__.py  cryptocurrency.py  market_summary.py  price_history.py
src/config/: auth.py  config.py  database.py  security.py
src/controllers/: controller.py  cryptocurrency.py  currency.py  favorite.py  market_summary.py  price_history.py  user.py
src/models/: __all_models.py  favorite_model.py  user_model.py
src/repositories/: coingecko_repository.py  favorite_repository.py  repository.py
src/schemas/: __init__.py  cryptocurrency.py  favorite.py  market_summary.py  price_history.py  user.py
src/services/: cryptocurrencies_service.py  favorite_service.py  market_service.py  price_service.py  service.py  user_service.py
tests/: cryptocurrencies.py  market_summary.py  price_history.py  test_cryptocurrencies_service.py  test_favorite_service.py  test_market_service.py  test_price_service.py  test_user_service.py
