[tool.poetry]
name = "bff-coingecko-dad"
version = "0.1.0"
description = "Backend for Frontend - Desafio Técnico"
authors = ["Lucas Ferreira <lucas.ferreira@geowellex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
fastapi = "0.115.5"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.27.2"
idna = "3.10"
iniconfig = "2.0.0"
packaging = "24.2"
pluggy = "1.5.0"
pydantic = "2.10.1"
pydantic-settings = "2.6.1"
pydantic-core = "2.27.1"
pytest = "8.3.3"
python-dotenv = "1.0.1"
requests = "2.32.3"
sniffio = "1.3.1"
starlette = "0.41.3"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.32.1"
blue = "^0.9.1"
isort = "^5.13.2"
sqlalchemy = "^2.0.36"
hypercorn = "^0.17.3"
pytz = "^2024.2"
asyncpg = "^0.30.0"
python-multipart = "^0.0.17"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pytest-asyncio = "^1.0.0"
trio = "^0.30.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
